--- a/templates/S3-StaticWebsiteHosting.template
+++ b/templates/S3-StaticWebsiteHosting.template
@@ -1,7 +1,7 @@
 {
   "AWSTemplateFormatVersion": "2010-09-09",
 
-  "Description": "Create S3 bucket for static website hosting.",
+  "Description": "Create S3 bucket and policies for static website hosting.",
 
   "Parameters": {
     "BucketName": {
@@ -26,12 +26,12 @@
       "Default": "Suspended"
     },
     "ErrorDoc": {
-      "Description": "The file name of the error document.",
+      "Description": "The file name of the error document (e.g. error.html, index.html).",
       "Type": "String",
-      "Default": "error.html"
+      "Default": "index.html"
     },
     "ReadWriteDeleteGroupName": {
-      "Description": "Optional. Name of the Group to be given Read-Write-Delete access to the given bucket.",
+      "Description": "Optional. Name of the Group to be created and given Read-Write-Delete access to the S3 bucket.",
       "Type": "String",
       "Default":""
     }
@@ -120,7 +120,7 @@
             },
             {
               "Effect": "Allow",
-              "Action": ["s3:PutObject", "s3:GetObject", "s3:DeleteObject"],
+              "Action": ["s3:PutObject*", "s3:GetObject", "s3:DeleteObject"],
               "Resource": {"Fn::Join": ["", ["arn:aws:s3:::", {"Ref": "BucketName"}, "/*"]]}
             }
          ]
