--- a/templates/S3-WithVersioningAndLogging-ReadWriteDeletePolicy-ReadOnlyPolicy.template
+++ b/templates/S3-WithVersioningAndLogging-ReadWriteDeletePolicy-ReadOnlyPolicy.template
@@ -93,7 +93,7 @@
             },
             {
               "Effect": "Allow",
-              "Action": ["s3:PutObject", "s3:GetObject", "s3:DeleteObject" ],
+              "Action": ["s3:PutObject*", "s3:GetObject", "s3:DeleteObject" ],
               "Resource": {"Fn::Join": ["", ["arn:aws:s3:::", {"Ref": "BucketName"}, "/*"]]}
             }
           ]
